--- a/src/styles/MovingBG.css
+++ b/src/styles/MovingBG.css
@@ -19,7 +19,7 @@
   left: 0;
   margin: 0;
   padding: 0;
-  background: #000000;
+  background: #121212;
   overflow: hidden;
 }
 .background li {
@@ -35,7 +35,7 @@
 }
 
 .background li:nth-child(4n + 1) {
-  --random-color: #f87171; /* Red */
+  --random-color: #ff5959; /* Red */
 }
 
 .background li:nth-child(4n + 2) {
@@ -43,11 +43,11 @@
 }
 
 .background li:nth-child(4n + 3) {
-  --random-color: #60a5fa; /* Blue */
+  --random-color: #45b3eb; /* Blue */
 }
 
 .background li:nth-child(4n + 4) {
-  --random-color: #facc15; /* Yellow */
+  --random-color: #fad05a; /* Yellow */
 }
 
 .background li:nth-child(0) {
